Expose more API via rest and format
